fix swagger typo
